<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".OlvidoActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="281dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/recuperar"
        android:textColor="@color/colorWhite"
        android:background="@color/colorNegro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etemail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_correorecu"
        android:drawablePadding="6dp"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/correo"
        android:background="@color/colorNegro"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recuperar" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/amaranth_bold"
        android:background="@color/colorWhite"

        android:text="@string/enviar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail2"
        app:layout_constraintVertical_bias="0.184" />

</androidx.constraintlayout.widget.ConstraintLayout>