<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="318dp"
        android:layout_height="188dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_correo"
        android:drawablePadding="6dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:background="@color/colorNegro"
        android:textColorHint="@color/colorWhite"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_clave"
        android:drawablePadding="6dp"
        android:hint="@string/contraseña"
        android:textColor="@color/colorWhite"
        android:background="@color/colorNegro"


        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <TextView
        android:id="@+id/tv_olvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/olvidar"
        android:background="@color/colorWhite"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/etClave"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="263dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/colorBoton"
            android:fontFamily="@font/amaranth_bold"
            android:text="Registrar"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/amaranth_bold"
            android:background="@color/colorBoton"
            android:text="Ingresar"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>